[FIX] FIx text overflow issue

--- a/src/app/modules/homes/body/shared-module/common-search-result-document-list/article/article-details/article-details.component.less
+++ b/src/app/modules/homes/body/shared-module/common-search-result-document-list/article/article-details/article-details.component.less
@@ -17,6 +17,7 @@ a {
 }
 
 .post-title {
+  white-space: normal;
   font-size: 25px;
   font-weight: 500;
 }
